testsuite/tests/typecheck/should_fail/T22645.stderr

T22645.hs:9:5: error: [GHC-25897]
    • Couldn't match type ‘a’ with ‘b’ arising from a use of ‘coerce’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          p :: forall a b. Coercible a b => T Maybe a -> T Maybe b
        at T22645.hs:8:1-44
      ‘b’ is a rigid type variable bound by
        the type signature for:
          p :: forall a b. Coercible a b => T Maybe a -> T Maybe b
        at T22645.hs:8:1-44
    • In the expression: coerce
      In an equation for ‘p’: p = coerce
    • Relevant bindings include
        p :: T Maybe a -> T Maybe b (bound at T22645.hs:9:1)
